[package]
name = "archbot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.40"
lazy_static = "1.5.0"
poise = "0.6.1"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
